# MagiAttention

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  _config.yml  feed.xml  index.html  makefile  mkdocs.yml  mypy.ini  project.toml  pyproject.toml  requirements.txt  requirements_dev.txt  robots.txt  setup.py  sitemap.xml
.github/workflows/: ci.yaml  deploy.yml  docs.yaml  lint.yaml  lint.yml
_includes/: header.liquid
_layouts/: distill.liquid
_pages/: dffa.md  magiattn.md
_posts/: 2025-04-02-dffa-blog-demo.md
_sass/: _base.scss  _layout.scss
assets/bibliography/: magiattn.bib
assets/css/: main.css  main.css.map
assets/js/: search-data.js
assets/jupyter/: blog.ipynb.html  demo.ipynb.html
blog/2015/: index.html
blog/2020/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
blog/2025/: index.html
books/2025/: index.html
books/the_godfather/: index.html
dffa/: __init__.py  config.py  dist_attn_runtime_mgr.py
dffa/api/: __init__.py  dist_flex_attn_interface.py  functools.py
dffa/benchmarking/: __init__.py  bench.py  image_grid.py
dffa/comm/: __init__.py  work.py
dffa/common/: __init__.py  enum.py  mask.py  ranges.py
dffa/csrc/: example.h
dffa/functional/: __init__.py  dispatch.py  dist_attn.py  flex_flash_attn.py  sdpa.py  utils.py
dffa/meta/: __init__.py  _calc_attn_meta.py  _calc_dispatch_meta.py
dffa/testing/: __init__.py  dist_common.py  gt_dispatcher.py  precision.py
dffa/utils/: _utils.py  debug.py  nvtx.py
docs/: index.md
example/megatron/: README.md
example/torch_native/: README.md  configuration_llama.py  llama_pretrain_config.py  main.py  modeling_llama.py  run.sh
exps/: .gitignore  README.md  requirements.txt
exps/dist_attn/: main.py  run.sh
exps/tests/: test_dsulysess_attn.py  test_loongtrain_attn.py  test_te_ring_attn_with_kv_ag.py  test_te_ring_attn_with_kv_p2p.py  test_teulysess_attn.py  test_usp_attn.py
magi_attention/: __init__.py  config.py  dist_attn_runtime_mgr.py
magi_attention/api/: __init__.py  functools.py  magi_attn_interface.py
magi_attention/benchmarking/: __init__.py  bench.py  image_grid.py  utils.py
magi_attention/comm/: __init__.py  work.py
magi_attention/common/: __init__.py  enum.py  mask.py  range.py  ranges.py
magi_attention/functional/: __init__.py  dispatch.py  dist_attn.py  flex_flash_attn.py  sdpa.py  utils.py
magi_attention/meta/: __init__.py  _calc_attn_meta.py  _calc_dispatch_meta.py
magi_attention/testing/: __init__.py  dist_common.py  gt_dispatcher.py  precision.py  utils.py
magi_attention/utils/: __init__.py  _utils.py  debug.py  nvtx.py
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
projects/1_project/: index.html
projects/2_project/: index.html
search/: search_index.json
tests/: test_dist_attn_interface.py  test_magi_attn_interface.py  test_pipeline.py  test_pipeline_sdpa.py
tools/: build_helper.py  calculator.py
zeus/: __init__.py  config.py  dist_attn_runtime_mgr.py
zeus/common/: enum.py  (+7 more)
(+600 files in other folders)
