[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "build_helper"
backend-path = ["tools/"]

[project]
name = "dffa"
dynamic = ["version"]
description = "A Super fast distributed attention solver"
authors = [{name = "littsk", email = "zeweitao630@gmail.com"}, {name = "Strivin", email = "hyp@smail.nju.edu.cn"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/world-sim-dev/dist-flex-flash-attention"
"Bug Tracker" = "https://github.com/world-sim-dev/dist-flex-flash-attention/issues"

[tool.setuptools]
packages = ["dffa"]

[tool.setuptools_scm]
write_to = "dffa/version.py"
fallback_version = "1.2.0"

[tool.isort]
profile = "black"
