[project]
name = "magi_attention"
dynamic = ["version"]
description = "A Distributed Attention Towards Linear Scalability for Ultra-Long Context, Heterogeneous Data Training"
authors = [
  {name = "littsk", email = "zeweitao@sand.ai"},
  {name = "Strivin", email = "hyp@smail.nju.edu.cn"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SandAI-org/MagiAttention/"
"Bug Tracker" = "https://github.com/SandAI-org/MagiAttention/issues"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"
